<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/title_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/title_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/blank_photo"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photoProfile"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/nim" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nim"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/nama" />

    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nama"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:text="@string/kelas" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kelas"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/deskripsi"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deskripsi"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:gravity="center"
        android:text="@string/btn_home" />



</RelativeLayout>